# updatesupport

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish-finance.yml  publish.yml
docs/: README.md  api-surface.md  audit-specs.md  benchmark-gallery.md  breakdown-point-analysis.md  calibrated-public-report-design.md  categorical-rollup-design.md  causal-library-integration.md  conf.py  conformal-mapie-integration.md  data-diagnostics.md  extensions.md  folktables-acs-income-interpretation.md  framework.rst  historical-tv-calibration.md  index.rst  interaction-aware-refinements.md  mathematical-statistical-soundness.md  minimum-claim-breaking-witness.md  model-assisted-joint-analysis.md  positioning-and-lineage.md  public-representation-frontier.md  quickstart.rst  releasing.md  reporting-claims.md  representation-adequacy.md  representation-stability-certificates.md  residopt-integration.md  revops-funnel-analysis.md  robust-comparison-ranking.md  shared-representation-design.md  structured-exports.md  theory-and-backends.md  transport-presets.md
docs/_static/: custom.css
docs/api/: adapters.rst  breakdown.rst  breaking.rst  calibrated_design.rst  calibration.rst  claims.rst  comparison.rst  conformal.rst  data.rst  exports.rst  frontier.rst  high_level.rst  index.rst  linear_feasibility.rst  model_assisted.rst  plugins.rst  portfolio.rst  reports.rst  rollup.rst  specs.rst  targets.rst  transport.rst
examples/: __init__.py  acic_2016.py  benchmark_gallery.py  conformal_classification_stability.py  conformal_reporting_stability.py  folktables_acs.py  folktables_acs_causal.py  ml_eval_stability.py  product_experiment_stability.py  revops_funnel_from_csv.py  revops_funnel_stability.py  revops_funnel_trend_stability.py  sensitivity_plots.py
examples/notebooks/: dowhy_downstream_reporting_colab.ipynb  econml_downstream_reporting_colab.ipynb
tests/: test_adapters.py  test_breakdown.py  test_breaking_witness.py  test_calibrated_design.py  test_calibration.py  test_claim.py  test_comparison.py  test_conformal_classification_stability_example.py  test_conformal_reporting_stability_example.py  test_cvxpy_backend.py  test_dataframe.py  test_dowhy.py  test_exports.py  test_folktables_example.py  test_frontier.py  test_joint.py  test_linear_feasibility.py  test_ml_eval_stability_example.py  test_notebooks.py  test_plugins.py  test_portfolio.py  test_product_experiment_stability_example.py  test_q_presets.py  test_refinement_interactions.py  test_report.py  test_residopt_backend.py  test_revops_funnel_from_csv_example.py  test_revops_funnel_stability_example.py  test_revops_funnel_trend_stability_example.py  test_rollup.py  test_spec.py  test_updatesupport.py
updatesupport/: __init__.py  adapters.py  artifacts.py  breakdown.py  breaking.py  calibrated_design.py  calibration.py  certificate.py  claim.py  comparison.py  conformal.py  data.py  dowhy.py  environments.py  exports.py  frontier.py  joint.py  linear_feasibility.py  metrics.py  partition.py  plugins.py  portfolio.py  presets.py  problem.py  report.py  residopt_backend.py  results.py  rollup.py  spec.py  targets.py
