[project]
name = "updatesupport"
version = "0.1.0"
description = "Representation adequacy and transport-stability auditing in Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
causal = [
    "econml>=0.16",
    "numba>=0.61",
]
cvxpy = [
    "cvxpy>=1.5",
]
dowhy = [
    "dowhy>=0.13",
]
examples = [
    "folktables>=0.0.12",
    "matplotlib>=3.9",
    "pandas>=2.0",
    "seaborn>=0.13",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "hypothesis>=6.155.7",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["updatesupport*"]
