[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "updatesupport"
version = "0.1.2"
description = "Representation adequacy and transport-stability auditing in Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "causal-inference",
    "partial-identification",
    "representation-adequacy",
    "sensitivity-analysis",
    "transport-stability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

[project.urls]
Homepage = "https://github.com/nahuaque/updatesupport"
Repository = "https://github.com/nahuaque/updatesupport"
Issues = "https://github.com/nahuaque/updatesupport/issues"

[project.optional-dependencies]
causal = [
    "econml>=0.16",
    "numba>=0.61",
]
cvxpy = [
    "cvxpy>=1.5",
]
scip = [
    "cvxpy>=1.5",
    "pyscipopt>=5.0",
]
dowhy = [
    "dowhy>=0.13",
]
examples = [
    "folktables>=0.0.12",
    "matplotlib>=3.9",
    "pandas>=2.0",
    "seaborn>=0.13",
]
finance = [
    "updatesupport-finance>=0.1.1",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "hypothesis>=6.155.7",
    "pytest>=8.0",
    "ruff>=0.8",
    "twine>=6.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["updatesupport*"]

[tool.uv.workspace]
members = ["packages/updatesupport-finance"]

[tool.uv.sources]
updatesupport-finance = { workspace = true }
