[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "updatesupport"
version = "0.1.4"
description = "Aggregation-bias and subgroup-composition sensitivity audits in Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "aggregation-bias",
    "causal-inference",
    "ecological-fallacy",
    "fairness-auditing",
    "partial-identification",
    "representation-adequacy",
    "sensitivity-analysis",
    "simpsons-paradox",
    "subgroup-analysis",
    "transport-stability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

[project.urls]
Homepage = "https://github.com/nahuaque/updatesupport"
Repository = "https://github.com/nahuaque/updatesupport"
Issues = "https://github.com/nahuaque/updatesupport/issues"

[project.optional-dependencies]
causal = [
    "econml>=0.16",
    "numba>=0.61",
]
cvxpy = [
    "cvxpy>=1.5",
]
residopt = [
    "residopt>=0.1.0; python_version >= '3.13'",
]
scip = [
    "cvxpy>=1.5",
    "pyscipopt>=5.0",
]
dowhy = [
    "dowhy>=0.13",
]
examples = [
    "folktables>=0.0.12",
    "matplotlib>=3.9",
    "pandas>=2.0",
    "seaborn>=0.13",
]
finance = [
    "updatesupport-finance>=0.1.3",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "hypothesis>=6.155.7",
    "pytest>=8.0",
    "ruff>=0.8",
    "twine>=6.1",
]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=4.0",
    "sphinx>=7.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
conflicts = [
    [
        { extra = "causal" },
        { extra = "residopt" },
    ],
]

[tool.setuptools.packages.find]
include = ["updatesupport*"]

[tool.uv.workspace]
members = ["packages/updatesupport-finance"]

[tool.uv.sources]
updatesupport-finance = { workspace = true }
